# CoverageBadgeTest

./: CMakeLists.txt  README.md
.github/workflows/: coverage.yml
src/: code.cpp  code.h
test/: test.cpp
